--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -2,3 +2,10 @@
   width: 80%;
   margin: 0 auto;
 }
+
+.About {
+  background: white;
+  width: 90%;
+  margin: 0 auto;
+  padding-bottom: 20px;
+}
