--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,6 +2,10 @@
   font-family: 'Arimo', sans-serif;
 }
 
+body {
+  background: #131313;
+}
+
 .App {
   text-align: center;
 }
@@ -14,7 +18,8 @@
   background-color: #131313;
   height: 60px;
   padding: 20px 0 5px 0;
-  color: white; }
+  color: white; 
+}
 
 .App-title {
   font-weight: 400;
