--- a/src/containers/Result/Result.css
+++ b/src/containers/Result/Result.css
@@ -2,5 +2,17 @@
   background: white;
   width: 95%;
   margin: 0 auto;
+  margin-top: 15px;
   border-radius: 14px;
+  padding: 15px 0 15px 0;
+}
+
+.original-text {
+  height: 300px;
+  overflow: auto;
+  width: 95%;
+  margin: 5px auto;
+  border-radius: 14px;
+  margin-bottom: 10px;
+  border: 1px solid #535252;
 }
