Fix active state for navlink, other minor css changes and express to dependencies

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -6,13 +6,8 @@
   padding-bottom: 12px;
 }
 
-.Navi a {
-/*  color: white;*/
-/*  text-decoration: none;*/
-}
-
 .Navi a:hover {
-  text-decoration: underline;
+  text-decoration: underline overline;
 }
 
 .Nav {
